vocabularies/allars/allars-convert.log
  File "tools/oai-pmh-to-skos/oai-pmh-to-skos.py", line 179
    print >>sys.stderr, "Unknown 040b value for concept <%s>, skipping record' % uri
                                                                                   ^
SyntaxError: EOL while scanning string literal
